<resources>
    <string name="mine_app_name">mine</string>

    <string name="mine_label_login">请登录</string>
    <string name="mine_button_wait_pay">待付款</string>
    <string name="mine_button_wait_delivery">待发货</string>
    <string name="mine_button_wait_take_delivery">待收货</string>
    <string name="mine_button_wait_comment">待评价</string>
    <string name="mine_button_all_order">全部订单</string>
    <string name="mine_label_coupon">我的礼券</string>
    <string name="mine_label_works">我的作品</string>
    <string name="mine_label_friends">我的好友</string>
    <string name="mine_label_address">收货地址</string>
    <string name="mine_label_customer_service">客服和售后</string>
    <string name="mine_label_scan_qrcode">扫乐唯码</string>
    <string name="mine_label_see_more">更多</string>

    <string name="mine_title_see_more">更多</string>
    <string name="mine_label_app_name">乐乐定制</string>
    <string name="mine_label_push_setting">推送消息设置</string>
    <string name="mine_label_feedback">意见反馈</string>
    <string name="mine_label_cheer_us">为我们加油</string>
    <string name="mine_label_about_us">关于我们</string>
    <string name="mine_label_business_cooperation">商务合作</string>
    <string name="mine_label_copyright_statement">版权/责任声明</string>
    <string name="mine_label_clear_cache">清理缓存</string>


    <string name="mine_title_coupon">我的礼券</string>

    <string name="mine_lable_no_login">未登录</string>
    <string name="mine_hint_phone">请输入手机号</string>
    <string name="mine_hint_message">短信验证码</string>
    <string name="mine_button_send_code">发送验证码</string>
    <string name="mine_button_login">登录</string>
    <string name="mine_label_quick_login">一键登录</string>
    <string name="mine_label_wechat">微信</string>
    <string name="mine_label_qq">QQ</string>
</resources>
