<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/mine_bg_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_default_header"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/basic_activity_horizontal_margin"
        android:layout_marginBottom="25dp"
        android:background="@color/basic_transparent"
        android:scaleType="fitCenter"
        android:src="@mipmap/mine_ic_user_default_header"
        app:layout_constraintBottom_toBottomOf="@id/iv_background"
        app:layout_constraintLeft_toLeftOf="@id/iv_background" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_dp_10"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/mine_label_login"
        android:textColor="@color/basic_white"
        android:textSize="@dimen/basic_text_big_size"
        app:layout_constraintBottom_toBottomOf="@id/ib_default_header"
        app:layout_constraintLeft_toRightOf="@id/ib_default_header"
        app:layout_constraintTop_toTopOf="@id/ib_default_header" />

    <Button
        android:id="@+id/btn_wait_pay"
        style="@style/BasicMyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mine_btn_order_selector"
        android:drawableTop="@mipmap/mine_ic_wait_pay"
        android:drawablePadding="@dimen/basic_dp_6"
        android:paddingVertical="@dimen/basic_dp_10"
        android:text="@string/mine_button_wait_pay"
        android:textColor="@color/basic_text_light"
        android:textSize="@dimen/basic_text_small_size"
        app:layout_constraintLeft_toLeftOf="@id/iv_background"
        app:layout_constraintRight_toLeftOf="@id/btn_wait_delivery"
        app:layout_constraintTop_toBottomOf="@id/iv_background" />

    <Button
        android:id="@+id/btn_wait_delivery"
        style="@style/BasicMyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mine_btn_order_selector"
        android:drawableTop="@mipmap/mine_ic_wait_delivery"
        android:drawablePadding="@dimen/basic_dp_6"
        android:paddingVertical="@dimen/basic_dp_10"
        android:text="@string/mine_button_wait_delivery"
        android:textColor="@color/basic_text_light"
        android:textSize="@dimen/basic_text_small_size"
        app:layout_constraintLeft_toRightOf="@id/btn_wait_pay"
        app:layout_constraintRight_toLeftOf="@id/btn_wait_take_delivery"
        app:layout_constraintTop_toTopOf="@id/btn_wait_pay" />

    <Button
        android:id="@+id/btn_wait_take_delivery"
        style="@style/BasicMyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mine_btn_order_selector"
        android:drawableTop="@mipmap/mine_ic_wait_take_delivery"
        android:drawablePadding="@dimen/basic_dp_6"
        android:paddingVertical="@dimen/basic_dp_10"
        android:text="@string/mine_button_wait_take_delivery"
        android:textColor="@color/basic_text_light"
        android:textSize="@dimen/basic_text_small_size"
        app:layout_constraintLeft_toRightOf="@id/btn_wait_delivery"
        app:layout_constraintRight_toLeftOf="@id/btn_wait_comment"
        app:layout_constraintTop_toTopOf="@id/btn_wait_delivery" />

    <Button
        android:id="@+id/btn_wait_comment"
        style="@style/BasicMyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mine_btn_order_selector"
        android:drawableTop="@mipmap/mine_ic_wait_comment"
        android:drawablePadding="@dimen/basic_dp_6"
        android:paddingVertical="@dimen/basic_dp_10"
        android:text="@string/mine_button_wait_comment"
        android:textColor="@color/basic_text_light"
        android:textSize="@dimen/basic_text_small_size"
        app:layout_constraintLeft_toRightOf="@id/btn_wait_take_delivery"
        app:layout_constraintRight_toLeftOf="@id/btn_all_orders"
        app:layout_constraintTop_toTopOf="@id/btn_wait_take_delivery" />

    <Button
        android:id="@+id/btn_all_orders"
        style="@style/BasicMyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:background="@drawable/mine_btn_order_selector"
        android:drawableTop="@mipmap/mine_ic_all_order"
        android:drawablePadding="@dimen/basic_dp_6"
        android:paddingVertical="@dimen/basic_dp_10"
        android:text="@string/mine_button_all_order"
        android:textColor="@color/basic_text_light"
        android:textSize="@dimen/basic_text_small_size"
        app:layout_constraintLeft_toRightOf="@id/btn_wait_comment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_wait_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>
